k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist
  labels:
    app: wishlist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wishlist
  template:
    metadata:
      labels:
        app: wishlist
    spec:
      containers:
        - name: wishlist
          image: cluster-registry:5000/wishlist:1.0
          imagePullPolicy: IfNotPresent
          command: ["sh","-lc","exec gunicorn -b 0.0.0.0:8080 wsgi:app"]
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
